--- a/resources.qrc
+++ b/resources.qrc
@@ -1,7 +1,8 @@
 <RCC>
-    <qresource prefix="/plugins/collect_odk" >
+    <qresource prefix="/plugins/connect_odk" >
         <file>download.svg</file>
         <file>split.svg</file>
         <file>logo.svg</file>
+        <file>qaqc.svg</file>
     </qresource>
 </RCC>
